feat: 完成App Core运行与帮助服务
